k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook-db
  labels:
    app: guestbook
    tier: database
---
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook-api
  labels:
    app: guestbook
    tier: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook-ui
  labels:
    app: guestbook
    tier: frontend
